--- a/src/views/login/css/index.less
+++ b/src/views/login/css/index.less
@@ -1,12 +1,5 @@
 #login {
-    .loginNav {
-        background-color: #1989fa;
-
-        .van-nav-bar__title {
-            color: white;
-        }
-    }
-
+    margin-top: 46px;
     .input_wrap {
         padding: 20px;
         .mobile,
