--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -13,24 +13,29 @@
  em,
  b,
  ul,
- li{
-     margin: 0;
+ li {
+     margin : 0;
      padding: 0;
  }
 
- a{
-    color: black;
-    text-decoration: none;
+ a {
+     color          : black;
+     text-decoration: none;
  }
- input{
-     border: none;
+
+ input {
+     border : none;
      outline: none;
  }
 
- i,em{
+ i,
+ em {
      font-style: normal;
  }
 
- ul,li{
+ ul,
+ li {
      list-style: none;
  }
+
+ 
