--- a/src/views/login/css/index.less
+++ b/src/views/login/css/index.less
@@ -1,6 +1,7 @@
 #login {
     margin-top: 46px;
     .input_wrap {
+        margin-top: 20%;
         padding: 20px;
         .mobile,
         .code {
@@ -18,7 +19,7 @@
             height: 35px;
             display: inline-block;
             // background-color: pink;
-            border-left: 1px solid #EDEDED;
+            border-left: 1px solid #202529;
             button{
                 background-color: #EDEDED;
                 border: none;
@@ -37,7 +38,7 @@
         .code_wrap {
             height: 40px;
             margin-bottom: 10px;
-            border-bottom: 1px solid #EDEDED;
+            border-bottom: 1px solid #202529;
         }
         .code_wrap{
             border: none;
