--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -6,6 +6,8 @@
   width: 100%;
   z-index: 20 !important;
 }
-.van-nav-bar .van-nav-bar__title {
+.van-nav-bar .van-nav-bar__title,
+.van-nav-bar .van-icon,
+.van-nav-bar .van-nav-bar__text {
   color: white;
 }
