--- a/src/assets/navbar.less
+++ b/src/assets/navbar.less
@@ -5,7 +5,9 @@
     left: 0;
     width: 100%;
     z-index: 20 !important;
-    .van-nav-bar__title {
+    .van-nav-bar__title,
+    .van-icon,
+    .van-nav-bar__text {
         color: white;
     }
 }
